--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -118,10 +118,10 @@ body{
         }
     }
     &.alert-success{
-        background-color: #8AFFA5;
+        background-color: #B0EDCB;
         border-bottom: 2px solid #33EA5E;
         &:hover{
-            background-color: #43f76d;
+            background-color: #48ED92;
         }
         .alert-icon{
             border: 2px solid #1A752F;
